# workspace

./: .tmux.conf  1.m4a  404.html  README.md  astronvim.sh  bingxiang.sh  dairy.md  demo-emoji-picker-ansi.py  demo-gum.sh  demo_ratatui.sh  demo_tui.py  hideicon.sh  index.html  lazyvim.sh  lunarvim.sh  mdCheet.md  novnc.sh  nvchad.sh  run_termux_app_manager_ui_demo.sh  scene_hideApp.sh  scene_hideStateBar.sh  sitemap.xml  termux-api.sh  termux-app-manager-nosudo.sh  termux-app-manager.sh  termux-install.sh  termux-install.sh.1  termux-install.sh.bak  termux-magisk-root-tool.sh  test.sh  thoughts.md  todo.md  ubuntu-install.sh  xperia-keys-moonlight.sh  xperia-magisk-module-install.sh  xperia-singbox-start.sh  ytcookie.txt
.config/: .tmux.conf  .zshrc
.config/.termux/: termux.properties
.config/.vnc/: config  xstartup
.config/autostart/: startup_script.sh  startup_terminal.desktop
.config/cmus/: autosave  command-history
.config/i3/: config
.config/kitty/: kitty.conf
.config/mpv/: mpv.conf
.config/nvim/: myplugins.lua
.config/yazi/: yazi.toml
blog/: atom.xml  index.html  rss.xml
docs/: docusaurus.config.js  package-lock.json
markdown-page/: index.html
script/: chrootubuntu-start.sh  chrootubuntu-update.sh  chrootubuntu.sh  extracted_data.py  generated-data.py  matlab.m  mavros2OnPi5  ohmyposh_1.ps1  prootdebian-start.sh  prootdebian-update.sh  prootdebian.sh  prootubuntu.sh  ros2.sh  termux-cd2.sh  termux-gradle-suport.sh  termux.sh  ubuntu.sh  windows.ps1
script/osg/: CMakeLists.txt  main.cpp  osg.sh  osg_test.sh
website/: package-lock.json
(+145 files in other folders)
